--- a/posts/2020.03.17.md
+++ b/posts/2020.03.17.md
@@ -11,3 +11,13 @@ keyword: '#개발 #공부'
 
 ### 공부
 1. 블로그 개발에 시간쓰느라 영어공부나 책읽는데 시간을 거의 못 썼다. 회사다니면서 내가 원하는 만큼의 여유로움과 함께 자기계발하기란 정말 힘들 것 같다. ㅠㅠ 휴, 부딪혀봐야지. 적어도 하루 영어공부는 꾸준히 할 수 있었으면. 
+
+
+### 시간
+
+1. 여자친구가 회사를 다니면서 시간이 빠듯해하는 것 같다. 회사 업무와 별도로 진행하는  프로젝트가 있다보니, 가용할 수 있는 시간이 적은게 못내 아쉬운 것 같다. 
+2. 시간활용에 관한 의견대립이 좀 있었는데, 나는 아무리 할게 많더라도 잠을 필요이상으로 줄이거나 밥을 거르거나하진 말자 주의다.  하루단위로 시간을 어떻게 더 확보해서 무언가를 더 많이 하려고 전력질주하기보다 차라리 좀더 길게보고 안정적으로 오래달릴 수 있었으면 하는 바램이 있다랄까. 
+
+그래서 잠은 최소수면시간을 정하고 그 이상 자면서 자투리 시간을 잘 활용하면 어떨까 제안을 했는데, 여자친구는 수면을 줄이지 않으면 활용할 수 있는 시간이 너무 부족해서 답답하게 느끼는 것 같다. 
+3. 처음 얘기할때는 내 말을 좀 들어줬으면 했는데 지금 돌이켜보면 너무 내 생각만 말했던 것 같기도 하다. 결국 의사결정하고 행동에 대한 책임은 본인이 지는 것일 텐데, 가까운 사이라서 더 강하게 말한 것 같기도하고. 
+4. 성장과 성취는 참 좋으면서 거기에 너무 매몰되기도 쉬운 것 같다. 둘 모두 피드백이 강렬하고 달콤하기에 한번 빠지면 정신없이 달리게 된다. 나 또한 한때 일에 엄청 몰입하면서 전력질주한 적이 있었고, 그 기간 되게 많은 성장을 했지만 그때의 삶의 패턴이 과연 지속가능한지는 의문스럽다. 생각이 다시 바뀔 수는 있겠지만, 지금의 나는 나의 리듬을 찾고 그 리듬에 맞춰서 목표를 향해 달려나가고 싶다.
