--- a/posts/2020.03.17.md
+++ b/posts/2020.03.17.md
@@ -1,12 +1,11 @@
 ---
-date: '2020-02-22'
+date: '2020-03-17'
 keyword: '#개발 #공부'
 ---
 
 ### 개발
 1. 내 웹사이트를 만드는데 시간이 좀 걸렸다. 오랜만에 코드를 짜서 그런지, 아니면 웹개발이 익숙하지 않아서 그런진 모르겠는데 꽤나 시간이 걸린다. 처음엔 좀 우아한 블로그를 만들어볼까하다가 최대한 css 없는 형태로 일단 만들기로 결정 ㅋㅋ. 
-2. Gatsby로 블로그를 만들면서 graphql을 처음 써보고 있다. 컨셉 정도는 이해하고 있었는데, 확실히 써보니까 더 잘 이해가 되는 느낌. 
-	
+2. Gatsby로 블로그를https://www.youtube.com/watch?v=zDWPTh6w3kU 만들면서 graphql을 처음 써보고 있다. 컨셉 정도는 이해하고 있었는데, 확실히 써보니까 더 잘 이해가 되는 느낌. 
 
 
 ### 공부
@@ -17,7 +16,6 @@ keyword: '#개발 #공부'
 
 1. 여자친구가 회사를 다니면서 시간이 빠듯해하는 것 같다. 회사 업무와 별도로 진행하는  프로젝트가 있다보니, 가용할 수 있는 시간이 적은게 못내 아쉬운 것 같다. 
 2. 시간활용에 관한 의견대립이 좀 있었는데, 나는 아무리 할게 많더라도 잠을 필요이상으로 줄이거나 밥을 거르거나하진 말자 주의다.  하루단위로 시간을 어떻게 더 확보해서 무언가를 더 많이 하려고 전력질주하기보다 차라리 좀더 길게보고 안정적으로 오래달릴 수 있었으면 하는 바램이 있다랄까. 
-
 그래서 잠은 최소수면시간을 정하고 그 이상 자면서 자투리 시간을 잘 활용하면 어떨까 제안을 했는데, 여자친구는 수면을 줄이지 않으면 활용할 수 있는 시간이 너무 부족해서 답답하게 느끼는 것 같다. 
 3. 처음 얘기할때는 내 말을 좀 들어줬으면 했는데 지금 돌이켜보면 너무 내 생각만 말했던 것 같기도 하다. 결국 의사결정하고 행동에 대한 책임은 본인이 지는 것일 텐데, 가까운 사이라서 더 강하게 말한 것 같기도하고. 
 4. 성장과 성취는 참 좋으면서 거기에 너무 매몰되기도 쉬운 것 같다. 둘 모두 피드백이 강렬하고 달콤하기에 한번 빠지면 정신없이 달리게 된다. 나 또한 한때 일에 엄청 몰입하면서 전력질주한 적이 있었고, 그 기간 되게 많은 성장을 했지만 그때의 삶의 패턴이 과연 지속가능한지는 의문스럽다. 생각이 다시 바뀔 수는 있겠지만, 지금의 나는 나의 리듬을 찾고 그 리듬에 맞춰서 목표를 향해 달려나가고 싶다.
