--- a/posts/20.03.24.md
+++ b/posts/20.03.24.md
@@ -1,14 +1,18 @@
 ---
 date: '2020-03-24'
-keyword: '#라디오 #아침 #맥'
+keyword: '#주식 #개발'
 ---
 
-### 라디오
-1. 일과를 마무리하고 샤워하면서 주식관련 영상을 들었는데 꽤나 유익했다. 무언가를 하면서 라디오를 통해 정보를 습득하는 것을 그리 선호하지는 않는데, 시간을 좀더 콤팩트하게 써야할때 꽤 유용할 수도 있겠다는 생각이 들었다. 
+### 주식
+1. 밥먹으면서 Youtube로 주식 공부를 하고 있다. 삼프로의 재무제표 강의를 조금씩 보고 있는데 용어가 매우 어렵다. 이거 봐도 내가 유의미하게 활용할 수 있을지 솔직히 확실은 잘 안든다 ㅋㅋ 시간 잘 활용해서 학습해봐야지
+2. 각국 정부들이 엄청난 양적완화로 경제를 살리려고 하고 있는 것 같다. 코로나가 단기간 내에 잡힐 것 같지않은데 얼마나 효과가 있을까? 
 
 
-### 아침
-1. 아침에 일어나는 시간이 계속 늘어나고 있다. 알람듣고 30분정도 다시 자다가, 30분정도 정신차리고 일어난다. 일찍 일어나서 아침을 챙겨먹게된건 좋지만 warm up 시간으로 40분 정도 쓰는 건 좀 아쉽다 ㅠㅠ. 바로 정신을 차리게 할 수 있을만한 방법을 찾아봐야겠다. 
+### 개발
+1. express로 API를 개발하고 있다. 오전중에 금방 끝날 것만 같았는데 이상한 삽질이 겹쳐져서 결국 하루종일 걸렸다. Repㅍository 패턴에 Business Logic이 얽혀있어 테스트하기가 매우 불편해져서, 그 로직을 분리하는 리팩토링 작업을 마저 해야할 것 같다. 
 
-### 맥
-1. 맥북이 자꾸 충전이 안된다. 배터리를 연결하지않았는데도 Power Source를 Power Adapter라고 하지않나, 실제로 충전을 해도 Battery is not charging이라고 하지않나. 큰 돈주고 산거고 1년도 안지났는데 말을 안들어서 너무 답답하다. 
+
+### 모닝 페이퍼
+지금 이 글을 쓰는 것은 25일 아침이다. 나는 매일 아침에 일어나서 그 전날 회고를 하는데, 오늘은 아침에 밍기적되지않고 바로 일어나 준비해서 뿌듯하다. 
+하루를 보내다보면 나에게 주어진 시간이 정말 제한적이다라는 사실을 계속해서 깨닫게 된다. 다양한 것들에 흥미를 갖고 공부하고 싶은데 해야할 일들을 정신없이 치우다보면 어느새 잠잘 시간이다. 
+이럴때면 지금 하고 있는 일에만 집중해야하나 싶은데, 너무 한가지만 공부하면 또 무료해지겠지 ㅎㅎ 나에게 주어진 시간을 최대한 잘 활용해서 다양한 견문을 쌓고 싶다. 
