--- a/posts/20.03.24.md
+++ b/posts/20.03.24.md
@@ -16,3 +16,5 @@ keyword: '#주식 #개발'
 지금 이 글을 쓰는 것은 25일 아침이다. 나는 매일 아침에 일어나서 그 전날 회고를 하는데, 오늘은 아침에 밍기적되지않고 바로 일어나 준비해서 뿌듯하다. 
 하루를 보내다보면 나에게 주어진 시간이 정말 제한적이다라는 사실을 계속해서 깨닫게 된다. 다양한 것들에 흥미를 갖고 공부하고 싶은데 해야할 일들을 정신없이 치우다보면 어느새 잠잘 시간이다. 
 이럴때면 지금 하고 있는 일에만 집중해야하나 싶은데, 너무 한가지만 공부하면 또 무료해지겠지 ㅎㅎ 나에게 주어진 시간을 최대한 잘 활용해서 다양한 견문을 쌓고 싶다. 
+
+린이가 많이 힘들어하는 것 같다. 너무 내 중심적으로 하루를 설계하고 달려온 것은 아닌가 반성. 적어도 하루 마지막에는 함께 산책하는 시간을 반드시 가져야지. 삶은 마라톤이라는 사실을 절대 잊지말자. 
