--- a/posts/20.03.31.md
+++ b/posts/20.03.31.md
@@ -1,16 +1,12 @@
 ---
 date: '2020-03-31'
-keyword: '#개발 #점심 #주식 '
+keyword: '#시사'
 ---
 
-### 개발
-1. 차일피일 밀리던 블로그 버그를 드디어 고쳤다. 막상 시작하니 얼마 안걸려서 더 기분 좋았다 ㅎㅎ 요즘 공부하고 있는게 많아서 시간내기 쉽지않지만 그래도 조금씩 시간투자해서 나만의 블로그를 만들었으면. 
+
+### 시사
+뉴스를 굉장히 자주 확인하고 읽게 되었다. 새로운 소식을 찾아서 읽는게 나름 재미있는 것 같다. 근데 아직 이런 정보를 시장흐름과의 연결접점으로는 못잡겠다. 매일매일 상한가 종목을 보고 있는데 내가 전혀 예상하지 못한 친구들만 있다 ㅠㅠ. 아직 좀더 내공수련이 필요한가봄. 주식과 뉴스 읽기에 한 2시간정도 쓰는 것 같은데, 하루가 매우 빠듯해진것 같다. 개발공부나 영어공부할 시간이 상대적으로 빠듯한데, 시간관리를 좀더 잘해야할듯 
 
 
-### 공부 
-1. 점심시간 활용에 대해 조금 고민된다. 점심시간을 잘 활용하면 적어도 40분 정도를 확보할 수 있는 것 같은데, 이 시간이 꽤 큰 것 같다. 예전엔 팀원들과 함께 밥먹는 시간을 무조건 더 가치있는 시간으로 생각했었는데, 요즘은 그런 믿음이 좀 흔들려서 그런지 개인적인 시간을 더 확보하는데 욕심이 난다. 오늘은 그냥 목이 간질간질거리길래 밥 따로 먹으면서 주식공부나 했다. 꽤 만족스러웠음 
-  
-
-### 주식
-1. 나름의 논리를 가지고 10만원씩 넣어보고 있는데 어렵다 ㅎㅎ 뉴스를 시장과 연결시키는 발상을 아직 하기 어렵다 ㅠㅠ 긴안목을 갖고 조금씩 해나가야할듯..
-
+### 모닝페이퍼
+피로가 누적되고 있는 듯한 느낌이 든다. 오늘따라 굉장히 피곤하다. 이상하게 어제 점심부터 배가 살살아픈데 은근히 신경쓰이는 것 같다. 건강식 위주로 먹으면서 무리하지 말아야할 듯. 
