--- a/posts/20.04.15.md
+++ b/posts/20.04.15.md
@@ -10,3 +10,6 @@ keyword: '#감정' '#건강'
 
 이 기회에 나는 감정적으로 나를 더 잘 통재하기 위한 방법을 고민해볼 수 있겠다. 여러가지 방법이 있겠지만 그중 가장 최고의 방법은 글쓰기인 것 같다. 글을 쓰면 차분하게 내 상태를 써내려가면서 이성적으로 바뀔 수 있다. '도마뱀적 사고'에서의 전환이랄까. 써내려가다보니 나는 손쉽게 파충류화되는 것 같다 ㅎㅎ. 고도화되지않은, 원시적 뇌가 나를 쉽게 지배한다랄까. 이성의 힘을 기를 필요가 있겠다. 
 
+
+### 함께 살기 
+같이 살면서 부딪히는 부분들이 많다. 각자가 생각하는 부분, 우선하는 가치가 다르고 바라는 점도 달라서 그런 것 같다. 단 한사람과도 맞춰서 살기가 이렇게 힌든데 다른 사람은 오죽할까. 역시 기대는 최소화하는게 좋다는 말이 다시금 떠오른다. 이런 경우에 내가 할 수 있는 최선은 무엇일까? 인간은 혼자서 자립할 수 있는 동물인지 나스스로는 확신할 수 없어서 무기력함이 오는 것 같다. 
